# auto-docs

./: .gitignore  LICENSE  data.ipynb  dev.ipynb  pyproject.toml  pytest.ini
autodocs/core/: annotation.py  function.py  main.py
autodocs/core/templates/: __init__.py  base.py  google.py  numpy.py
tests/: test_ast_functions.py
web/: streamlit_app.py
