[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autodocs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Ken Thampiratwong", email = "ken.thampiratwong@gmail.com"},
]

dependencies = [
    "libcst",
    "autopep8",
]

[project.optional-dependencies]
dev = [
    "streamlit",
]

[project.urls]
"Source" = "https://github.com/ken-tummada/auto-docs"